[tool.poetry]
name = "pwm-position-control"
version = "0.1"
authors = ["Hennzau <dev@enzo-le-van.fr>"]
description = "PWM Position Control is a library that allows you to control the position of servos, translating PWM values into relative degrees. It also comes with all tools to configure easily servo to work with virtual positionn"
readme = "README.md"

packages = [{ include = "pwm_position_control" }]

[tool.poetry.dependencies]
python = "^3.9"
pyarrow = "~17.0.0"
numpy = "< 2.0.0"
dynamixel-sdk = "3.7.31"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"